--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@barrelny/cli",
-  "version": "1.0.8",
+  "name": "@ryan43/barrelny-cli",
+  "version": "0.0.9",
   "description": "A build and deployment tool for the devs at Barrel",
   "main": "index.js",
   "bin": {
@@ -13,7 +13,7 @@
     "publish": "npm publish --access public"
   },
   "dependencies": {
-    "@shopify/themekit": "^0.6.12",
+    "@shopify/themekit": "^1.1.7",
     "babel-minify-webpack-plugin": "^0.3.1",
     "browser-sync": "^2.24.6",
     "colors": "^1.3.1",
@@ -27,10 +27,10 @@
     "moment-timezone": "^0.5.21",
     "shopify-node-api": "^1.8.0",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.3"
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack": "^4.29.5"
   },
   "peerDependencies": {
-    "webpack": "^4.16.2",
-    "gulp": "^3.9.1"
+    "gulp": "^4.0.0"
   }
 }
