--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ryan43/barrelny-cli",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "A build and deployment tool for the devs at Barrel",
   "main": "index.js",
   "bin": {
@@ -25,10 +25,11 @@
     "gulp-wrapper": "^1.0.0",
     "js-yaml": "^3.12.0",
     "moment-timezone": "^0.5.21",
+    "node-sass": "^7.0.1",
     "shopify-node-api": "^1.8.0",
+    "webpack": "^4.29.5",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.3",
-    "webpack": "^4.29.5"
+    "webpack-hot-middleware": "^2.22.3"
   },
   "peerDependencies": {
     "gulp": "^4.0.0"
