--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ryan43/barrelny-cli",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A build and deployment tool for the devs at Barrel",
   "main": "index.js",
   "bin": {
@@ -21,8 +21,8 @@
     "extract-text-webpack-plugin": "v4.0.0-beta.0",
     "glob-all": "^3.1.0",
     "gulp-concat": "^2.6.1",
+    "gulp-headerfooter": "^1.0.3",
     "gulp-rename": "^1.4.0",
-    "gulp-wrapper": "^1.0.0",
     "js-yaml": "^3.12.0",
     "moment-timezone": "^0.5.21",
     "node-sass": "^7.0.1",
